<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable = "true"
    android:focusableInTouchMode="true"
    >
    <Button android:layout_width="wrap_content" android:id="@+id/buttonScan" android:layout_height="wrap_content" android:text="@string/start_scan"></Button>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:text="@string/last_scan" android:layout_height="wrap_content" android:id="@+id/labelLastScan"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textLastScan"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/LinearLayout01" android:layout_width="match_parent">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/labelBtMac" android:text="@string/bluetooth_mac"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textBtMac"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/LinearLayout02" android:layout_width="match_parent">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/labelWlanIp" android:text="@string/wifi_ip"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textWlanIp"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/LinearLayout03" android:layout_width="match_parent">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/labelStatus" android:text="@string/status"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textStatus"></TextView>
    </LinearLayout>
    <ListView android:layout_width="match_parent" android:id="@+id/listClients" android:layout_height="wrap_content"></ListView>
</LinearLayout>
